<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@android:drawable/ic_menu_compass"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_workouts"
            android:icon="@android:drawable/ic_menu_agenda"
            android:title="@string/nav_workouts" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@android:drawable/ic_menu_myplaces"
            android:title="@string/nav_profile" />
        <item
            android:id="@+id/nav_stats"
            android:icon="@android:drawable/ic_menu_sort_by_size"
            android:title="@string/nav_stats" />
        <item
            android:id="@+id/nav_achievements"
            android:icon="@android:drawable/ic_menu_gallery"
            android:title="@string/nav_achievements" />
        <item
            android:id="@+id/nav_leaderboard"
            android:icon="@android:drawable/ic_menu_sort_by_size"
            android:title="@string/nav_leaderboard" />
    </group>

    <item android:title="Other">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@android:drawable/ic_menu_manage"
                android:title="@string/nav_settings" />
            <item
                android:id="@+id/nav_about"
                android:icon="@android:drawable/ic_menu_info_details"
                android:title="@string/nav_about" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@android:drawable/ic_menu_close_clear_cancel"
                android:title="@string/nav_logout" />
        </menu>
    </item>
</menu>
